CodeTriggerExtBaru/incl/Wd-dask64.h


//DASK Data Types
typedef unsigned char   U8;

typedef short           I16;

typedef unsigned short  U16;

typedef long            I32;

typedef unsigned long   U32;

typedef double          F64;

//Software trigger op code
#define SOFTTRIG_AI	 0x1
#define SOFTTRIG_AI_OUT	 0x2
//DAQ Event type for the event message  
#define DAQEnd   0
#define DBEvent  1
#define TrigEvent  2
//DAQ advanced mode  
#define DAQSTEPPED   	0x1   
#define RestartEn	0x2
#define DualBufEn	0x4
#define ManualSoftTrg 	0x40
#define DMASTEPPED    	0x80
#define AI_AVE		0x8
#define AI_AVE_32	0x10

//define ai channel parameter
#define AI_RANGE	0
#define AI_IMPEDANCE	1
#define ADC_DITHER	2
#define AI_COUPLING	3
#define ADC_Bandwidth	4

//define ai channel parameter value
#define IMPEDANCE_50Ohm 0
#define IMPEDANCE_HI	1

#define ADC_DITHER_DIS	0	
#define ADC_DITHER_EN	1

#define DC_Coupling	0	
#define AC_Coupling	1

#define BANDWIDTH_DEVICE_DEFAULT 	0	
#define BANDWIDTH_20M	20
#define BANDWIDTH_100M	100

//ai trigger out channel
#define AITRIGOUT_CH0	0
#define AITRIGOUT_PXI	2
#define AITRIGOUT_PXI_TRIG_0	2
#define AITRIGOUT_PXI_TRIG_1	3
#define AITRIGOUT_PXI_TRIG_2	4
#define AITRIGOUT_PXI_TRIG_3	5
#define AITRIGOUT_PXI_TRIG_4	6
#define AITRIGOUT_PXI_TRIG_5	7
#define AITRIGOUT_PXI_TRIG_6	8
#define AITRIGOUT_PXI_TRIG_7	9

//DIO Port Direction
#define INPUT_PORT      1
#define OUTPUT_PORT     2
//DIO Line Direction
#define INPUT_LINE      1
#define OUTPUT_LINE     2
//DIO mode
#define SDI_En      0
#define SDI_Dis     1

//Calibration Action
#define CalLoad		0
#define AutoCal		1
#define CalCopy		2

//TrigOUT Config
#define WD_OutTrgPWidth_50ns   0x0
#define WD_OutTrgPWidth_100ns  0x1
#define WD_OutTrgPWidth_150ns  0x2
#define WD_OutTrgPWidth_200ns  0x3
#define WD_OutTrgPWidth_500ns  0x4
#define WD_OutTrgPWidth_1us    0x5
#define WD_OutTrgPWidth_2us    0x6
#define WD_OutTrgPWidth_5us    0x7
#define WD_OutTrgPWidth_10us   0x8

//TrigOUT SRC/POL Config
#define WD_OutTrgSrcAuto   0x0
#define WD_OutTrgSrcManual 0x1
#define WD_OutTrg_Rising   0x0
#define WD_OutTrg_Fall     0x10

//device enum struct
typedef struct
{
U16 wModuleType;
U16 wCardID;
U16 geo_addr;
U16 Reserved;
char dispname[64];
} WD_DEVICE, *PWD_DEVICE;
 

/*------------------------------------------------------------------
** PCIS-DASK Function prototype
------------------------------------------------------------------*/
I16 __stdcall WD_Register_Card (U16 CardType, U16 card_num);

I16 __stdcall WD_Register_Card_By_PXISlot_GA (U16 CardType, U16 ga);

I16 __stdcall WD_Get_SDRAMSize  (U16 CardNumber, U32 *sdramsize);

I16 __stdcall WD_SoftTriggerGen(U16 wCardNumber, U8 op);

I16 __stdcall WD_Release_Card  (U16 CardNumber);

I16 __stdcall WD_GetActualRate(U16 wCardNumber, BOOLEAN fdir, F64 Rate, U32* interval, F64 *ActualRate);

I16 __stdcall WD_GetPXIGeographAddr (U16 wCardNumber, U8* geo_addr);

I16 __stdcall WD_GetBaseAddr(U16 wCardNumber, U32 *BaseAddr, U32 *BaseAddr2);

void * __stdcall WD_Buffer_Alloc (U16 wCardNumber, U32 dwSize);

BOOL __stdcall WD_Buffer_Free (U16 wCardNumber, void *buf);

I16 __stdcall WD_Device_Scan(WD_DEVICE* AvailModules, U16 ncount, U16* retcnt);
 
I16 __stdcall WD_GetFPGAVersion(USHORT wCardNumber, U32* version);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_AI_Config (U16 wCardNumber, U16 TimeBase, BOOLEAN adDutyRestore, U16 ConvSrc, BOOLEAN doubleEdged, BOOLEAN AutoResetBuf);

I16 __stdcall WD_AI_Trig_Config (U16 wCardNumber, U16 trigMode, U16 trigSrc, U16 trigPol, U16 anaTrigchan, F64 anaTriglevel, U32 postTrigScans, U32 preTrigScans, U32 trigDelayTicks, U32 reTrgCnt);

I16 __stdcall WD_OutTrig_Config (U16 wCardNumber, U16 trig_Ch, U16 trig_conf, U16 trig_width);

I16 __stdcall WD_AI_Set_Mode (U16 wCardNumber, U16 modeCtrl, U16 wIter);

I16 __stdcall WD_AI_CH_Config (U16 wCardNumber, U16 wChannel, U16 wAdRange);

I16 __stdcall WD_AI_CH_ChangeParam (U16 wCardNumber, U16 wChannel, U16 wParam, U16 wValue);

I16 __stdcall WD_AI_InitialMemoryAllocated (U16 CardNumber, U32 *MemSize);

I16 __stdcall WD_AI_VoltScale (U16 CardNumber, U16 AdRange, I16 reading, F64 *voltage);

I16 __stdcall WD_AI_VoltScale32 (U16 CardNumber, U16 AdRange, I32 reading, F64 *voltage);

I16 __stdcall WD_AI_ContReadChannel (U16 CardNumber, U16 Channel,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadMultiChannels (U16 CardNumber, U16 NumChans, U16 *Chans,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContScanChannels (U16 CardNumber, U16 Channel,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadChannelToFile (U16 CardNumber, U16 Channel, U16 BufId,
               U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadMultiChannelsToFile (U16 CardNumber, U16 NumChans, U16 *Chans,
               U16 BufId, U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContScanChannelsToFile (U16 CardNumber, U16 Channel, U16 BufId,
               U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContStatus (U16 CardNumber, U32 *Status);

I16 __stdcall WD_AI_ContVScale (U16 wCardNumber, U16 adRange, void *readingArray, F64 *voltageArray, I32 count);

I16 __stdcall WD_AI_ContVScaleEx (U16 wCardNumber, U16 adRange, U16 width, void *readingArray, F64 *voltageArray, I32 count);

I16 __stdcall WD_AI_AsyncCheck (U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt);

I16 __stdcall WD_AI_AsyncClear (U16 CardNumber, U32 *StartPos, U32 *AccessCnt);

I16 __stdcall WD_AI_AsyncClearEx (U16 CardNumber, U32 *StartPos, U32 *AccessCnt, U32 NoWait);

I16 __stdcall WD_AI_AsyncDblBufferHalfReady (U16 CardNumber, BOOLEAN *HalfReady, BOOLEAN *StopFlag);

I16 __stdcall WD_AI_AsyncDblBufferMode (U16 CardNumber, BOOLEAN Enable);

I16 __stdcall WD_AI_AsyncDblBufferToFile (U16 CardNumber);

I16 __stdcall WD_AI_ContBufferSetup (U16 wCardNumber, void *pwBuffer, U32 dwReadCount, U16 *BufferId);

I16 __stdcall WD_AI_ContBufferSetup32 (U16 wCardNumber, void *pwBuffer, U32 dwReadCount, U16 *BufferId);

I16 __stdcall WD_AI_ContBufferReset (U16 wCardNumber);

I16 __stdcall WD_AI_DMA_Transfer (U16 wCardNumber, U16 BufId);

I16 __stdcall WD_AI_ConvertCheck (U16 wCardNumber, BOOLEAN *bStopped);

I16 __stdcall WD_AI_AsyncReStartNextReady (U16 wCardNumber, BOOLEAN *bReady, BOOLEAN *StopFlag, U16 *RdyDaqCnt);

I16 __stdcall WD_AI_EventCallBack_x64 (U16 wCardNumber, I16 mode, I16 EventType, ULONG_PTR callbackAddr);

I16 __stdcall WD_AI_SetTimeout (U16 wCardNumber, U32 msec);


I16 __stdcall WD_AI_AsyncDblBufferOverrun (U16 wCardNumber, U16 op, U16 *overrunFlag);

I16 __stdcall WD_AI_AsyncDblBufferHandled (U16 wCardNumber);

I16 __stdcall WD_AI_AsyncReTrigNextReady (U16 wCardNumber, BOOLEAN *bReady, BOOLEAN *StopFlag, U32 *RdyTrigCnt);

/*---------------------------------------------------------------------------*/
//SSI
I16 __stdcall WD_SSI_SourceConn (U16 wCardNumber, U16 sigCode);

I16 __stdcall WD_SSI_SourceDisConn (U16 wCardNumber, U16 sigCode);

I16 __stdcall WD_SSI_SourceClear (U16 wCardNumber);

I16 __stdcall WD_Route_Signal (U16 wCardNumber, U16 signal, U16 Line, U16 dir);

I16 __stdcall WD_Signal_DisConn (U16 wCardNumber, U16 signal, U16 Line);