CodeTriggerExtBaru/incl/Wd-dask64.cs

	
	//Software trigger op code
	public const byte SOFTTRIG_AI	  = 0x1;
	public const byte SOFTTRIG_AI_OUT = 0x2;	
	//DAQ Event type for the event message  
	public const ushort DAQEnd   =0;
	public const ushort DBEvent  =1;
	public const ushort TrigEvent  =2;
	//DAQ advanced mode  
	public const ushort DAQSTEPPED   =0x1;   
	public const ushort RestartEn	 =0x2;
	public const ushort DualBufEn	 =0x4;
	public const ushort ManualSoftTrg =0x40;
	public const ushort DMASTEPPED =0x80;
	public const ushort AI_AVE = 0x8;	
	public const ushort AI_AVE_32 = 0x10;	
	//AI channel parameter
  public const ushort AI_RANGE = 0;
  public const ushort AI_IMPEDANCE = 1;
  public const ushort ADC_DITHER =   2;
  public const ushort AI_COUPLING =  3;
  public const ushort ADC_Bandwidth = 4;

 	//AI channel parameter value
  public const ushort IMPEDANCE_50Ohm = 0;
  public const ushort IMPEDANCE_HI = 1; 	
  	
  public const ushort ADC_DITHER_DIS = 0;
  public const ushort ADC_DITHER_EN = 1;   	
  	
  public const ushort DC_Coupling = 0;
  public const ushort AC_Coupling = 1;    	
        
  public const ushort BANDWIDTH_DEVICE_DEFAULT = 0;
  public const ushort BANDWIDTH_20M = 20;    	
	public const ushort BANDWIDTH_100M = 100;    	
	
	// TrigOUT Channel
	public const ushort AITRIGOUT_CH0  =0;
	public const ushort AITRIGOUT_PXI =2;
	public const ushort AITRIGOUT_PXI_TRIG_0 =2;
	public const ushort AITRIGOUT_PXI_TRIG_1 =3;
	public const ushort AITRIGOUT_PXI_TRIG_2 =4;
	public const ushort AITRIGOUT_PXI_TRIG_3 =5;
	public const ushort AITRIGOUT_PXI_TRIG_4 =6;
	public const ushort AITRIGOUT_PXI_TRIG_5 =7;
	public const ushort AITRIGOUT_PXI_TRIG_6 =8;	
	public const ushort AITRIGOUT_PXI_TRIG_7 =9;	
	
  	//DIO Port Direction
	public const ushort INPUT_PORT  = 1;
	public const ushort OUTPUT_PORT = 2;
	//DIO Line Direction
	public const ushort INPUT_LINE =  1;
	public const ushort OUTPUT_LINE = 2;
	//DIO mode
	public const ushort SDI_En  = 0;
	public const ushort SDI_Dis = 1;
	//Calibration Action
	public const ushort CalLoad = 0;
	public const ushort AutoCal = 1;
	public const ushort CalCopy = 2;
	
	// TrigOUT Config
	public const ushort WD_OutTrgPWidth_50ns  =0;
	public const ushort WD_OutTrgPWidth_100ns =1;
	public const ushort WD_OutTrgPWidth_150ns =2;
	public const ushort WD_OutTrgPWidth_200ns =3;
	public const ushort WD_OutTrgPWidth_500ns =4;
	public const ushort WD_OutTrgPWidth_1us   =5;
	public const ushort WD_OutTrgPWidth_2us   =6;
	public const ushort WD_OutTrgPWidth_5us   =7;
	public const ushort WD_OutTrgPWidth_10us  =8;	
	//TrigOUT SRC/POL Config
	public const ushort WD_OutTrgSrcAuto = 0x0;
	public const ushort WD_OutTrgSrcManual = 0x1;
	public const ushort WD_OutTrg_Rising = 0x0;
	public const ushort WD_OutTrg_Fall = 0x10;	
	
	[StructLayout(LayoutKind.Sequential)]
	public struct WD_DEVICE
	{
		public ushort wModuleType;
		public ushort wCardID;
		public ushort geo_addr;
		public ushort Reserved;
		[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)] 
		public string dispname;
	};
	/*------------------------------------------------------------------
	** PCIS-DASK Function prototype
	------------------------------------------------------------------*/
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Register_Card (ushort CardType, ushort card_num);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Register_Card_By_PXISlot_GA (ushort CardType, ushort ga);	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Get_SDRAMSize  (ushort CardNumber, out uint sdramsize);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_SoftTriggerGen(ushort wCardNumber, byte op);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Release_Card  (ushort CardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_GetActualRate(ushort wCardNumber, bool fdir, double Rate, out uint interval, out double ActualRate);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_GetPXIGeographAddr (ushort wCardNumber, out byte geo_addr);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_GetBaseAddr(ushort wCardNumber, out uint BaseAddr, out uint BaseAddr2);
	[DllImport("WD-Dask64.dll")]
	public static extern IntPtr WD_Buffer_Alloc (ushort wCardNumber, uint dwSize);
	[DllImport("WD-Dask64.dll")]
	public static extern bool WD_Buffer_Free(ushort wCardNumber, IntPtr buf);
  [DllImport("WD-Dask64.dll")]
  public static extern short WD_Device_Scan([MarshalAsAttribute(UnmanagedType.LPArray)] [In, Out] WD_DEVICE[] AvailModuled, ushort ncount, out ushort retcnt); 	
  [DllImport("WD-Dask64.dll")]
	public static extern short WD_Device_Scan(IntPtr AvailModules, ushort ncount, out ushort retcnt);  
  [DllImport("WD-Dask64.dll")]
	public static extern short WD_GetFPGAVersion  (ushort CardNumber, out uint version);	
	/*---------------------------------------------------------------------------*/
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_Config (ushort wCardNumber, ushort TimeBase, bool adDutyRestore, ushort ConvSrc, bool doubleEdged, bool AutoResetBuf);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_Trig_Config (ushort wCardNumber, ushort trigMode, ushort trigSrc, ushort trigPol, ushort anaTrigchan, double anaTriglevel, uint postTrigScans, uint preTrigScans, uint trigDelayTicks, uint reTrgCnt);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_OutTrig_Config (ushort wCardNumber, ushort trig_Ch, ushort trig_conf, ushort trig_width);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_Set_Mode (ushort wCardNumber, ushort modeCtrl, ushort wIter);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_CH_Config (ushort wCardNumber, short wChannel, ushort wAdRange);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_CH_ChangeParam (ushort wCardNumber, short wChannel, ushort wParam, ushort wValue);	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_InitialMemoryAllocated (ushort CardNumber, out uint MemSize);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_VoltScale (ushort CardNumber, ushort AdRange, short reading, out double voltage);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_VoltScale32 (ushort CardNumber, ushort AdRange, int reading, out double voltage);	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContReadChannel (ushort CardNumber, ushort Channel, ushort BufId, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContReadMultiChannels (ushort CardNumber, ushort NumChans, ushort[] Chans,
					  ushort BufId, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContScanChannels (ushort CardNumber, ushort Channel,
					  ushort BufId, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContReadChannelToFile (ushort CardNumber, ushort Channel, ushort BufId,
					  string FileName, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContReadMultiChannelsToFile (ushort CardNumber, ushort NumChans, ushort[] Chans,
					  ushort BufId, string FileName, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContScanChannelsToFile (ushort CardNumber, ushort Channel, ushort BufId,
					  string FileName, uint ReadScans, uint ScanIntrv, uint SampIntrv, ushort SyncMode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContStatus (ushort CardNumber, out uint Status);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContVScale (ushort wCardNumber, ushort adRange, short[] readingArray,double[] voltageArray, int count);
  [DllImport("WD-Dask64.dll")]
  public static extern short WD_AI_ContVScale(ushort wCardNumber, ushort adRange, IntPtr readingArray, double[] voltageArray, int count);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContVScaleEx (ushort wCardNumber, ushort adRange, ushort width, int[] readingArray, double[] voltageArray, int count);  
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncCheck (ushort CardNumber, out byte Stopped, out uint AccessCnt);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncClear (ushort CardNumber, out uint StartPos, out uint AccessCnt);
  [DllImport("WD-Dask64.dll")]
  public static extern short WD_AI_AsyncClearEx(ushort CardNumber, out uint StartPos, out uint AccessCnt, uint Nowait);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncDblBufferHalfReady (ushort CardNumber, out char HalfReady, out char StopFlag);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncDblBufferMode (ushort CardNumber, bool Enable);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncDblBufferToFile (ushort CardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContBufferSetup (ushort wCardNumber, short[] pwBuffer, uint dwReadCount, out ushort BufferId);
  [DllImport("WD-Dask64.dll")]
  public static extern short WD_AI_ContBufferSetup(ushort wCardNumber, IntPtr pwBuffer, uint dwReadCount, out ushort BufferId);
  [DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContBufferSetup32 (ushort wCardNumber, int[] pwBuffer, uint dwReadCount, out ushort BufferId);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ContBufferReset (ushort wCardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_DMA_Transfer (ushort wCardNumber, ushort BufId);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_ConvertCheck (ushort wCardNumber, out char bStopped);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncReStartNextReady (ushort wCardNumber, out char bReady, out char StopFlag, out ushort RdyDaqCnt);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_EventCallBack_x64(ushort wCardNumber, short mode, short EventType, MulticastDelegate callbackAddr);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_SetTimeout (ushort wCardNumber, uint msec);
	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncReTrigNextReady (ushort wCardNumber, out byte trgReady, out byte StopFlag, out uint RdyTrigCnt);	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncDblBufferHandled (ushort wCardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AI_AsyncDblBufferOverrun (ushort wCardNumber, ushort op, out ushort overrunFlag);
	
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_SSI_SourceConn (ushort wCardNumber, ushort sigCode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_SSI_SourceDisConn (ushort wCardNumber, ushort sigCode);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_SSI_SourceClear (ushort wCardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Route_Signal (ushort wCardNumber, ushort signal, ushort Line, ushort dir);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Signal_DisConn (ushort wCardNumber, ushort signal, ushort Line);
